--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <nav class="container mx-auto px-4 py-6 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3"><img src="/images/isotipo gradient(png).png" alt="FACILLIT hub Logo" class="w-10 h-10"><span class="text-xl font-bold text-white">FACILLIT hub</span></a>
             <div class="flex items-center gap-4">
-                <a href="login.html" class="page-transition-link font-medium text-slate-300 hover:text-white transition-colors">Login</a>
+                <a href="/docs/login.html" class="page-transition-link font-medium text-slate-300 hover:text-white transition-colors">Login</a>
                 <a href="#planos" class="bg-white text-black font-bold py-2 px-5 rounded-full hover:bg-red-500 hover:text-white transition-all duration-300 hidden sm:block">Comece Agora</a>
             </div>
         </nav>
