--- a/plataformas/day/dashboard-day.html
+++ b/plataformas/day/dashboard-day.html
@@ -34,19 +34,22 @@
                 <a href="#" class="nav-link" data-target="page-estudos"><svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M12 14l9-5-9-5-9 5 9 5z"></path><path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"></path></svg><span class="nav-text">Estudos</span></a>
             </nav>
             <div class="nav-footer p-6 border-t border-white/10 flex-shrink-0">
-                <a href="#" class="nav-link" data-target="page-configuracoes"><svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path></svg><span class="nav-text">Configurações</span></a>
+                <a href="#" class="nav-link" data-target="page-configuracoes"><svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0 3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path></svg><span class="nav-text">Configurações</span></a>
             </div>
         </aside>
 
         <div id="main-content" class="ml-64 flex-1 flex flex-col">
             <header class="h-16 flex items-center justify-between px-6 border-b border-white/10 bg-black/10 backdrop-blur-sm sticky top-0 z-30">
                 <button id="sidebar-toggle"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"></path></svg></button>
-                <div class="flex items-center gap-4"><div class="w-8 h-8 bg-gradient-to-r from-red-500 to-orange-500 rounded-full"></div></div>
+                <div class="flex items-center gap-4">
+                    <div class="w-8 h-8 bg-gradient-to-r from-red-500 to-orange-500 rounded-full"></div>
+                    <a href="#" id="logout-button" class="text-sm text-slate-400 hover:text-white">Sair</a>
+                </div>
             </header>
 
             <main class="flex-grow p-6">
                 <div id="page-visao-geral" class="page-content">
-                    <h1 class="text-3xl font-bold text-white">Bom dia, Alex!</h1>
+                    <h1 id="welcome-title" class="text-3xl font-bold text-white">Bom dia!</h1>
                     <p class="text-slate-400 mb-6">Qual é o seu foco para hoje?</p>
                     <div class="grid grid-cols-1 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                         <div class="lg:col-span-2 xl:col-span-3 space-y-6">
@@ -96,6 +99,6 @@
         </div>
     </div>
     
-    <script src="dashboard-day.js"></script>
+    <script src="dashboard-day.js" type="module"></script>
 </body>
 </html>
